--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -11,7 +11,7 @@
   		<table class='table'>
   		  <tr>
           <td><%= link_to(@book.user) do %>
-            <%= image_tag @book.user.get_profile_image, size:"100x100" %><br>
+            <%= image_tag @book.user.get_profile_image, size:"50x50" %><br>
             <%= @book.user.name %>
             <% end %>
           </td>
@@ -21,8 +21,45 @@
             <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success edit_book_#{@book.id}" %></td>
             <td><%= link_to 'Destroy', @book, method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger destroy_book_#{@book.id}"%></td>
             <% end %>
+            <td>
+             <% if @book.favorited_by?(current_user) %>
+              <%= link_to book_favorites_path(@book), method: :delete do %>
+              ♥<%= @book.favorites.count %>
+              <% end %>
+              <% else %>
+              <%= link_to book_favorites_path(@book), method: :post do %>
+              ♥<%= @book.favorites.count %>
+              <% end %>
+             <% end %>
+            </td>
+            <td><%= "コメント数:#{@book.book_comments.count}" %></td>
         </tr>
       </table>
+      <tadle class='table'>
+        <% @book.book_comments.each do |book_comment| %>
+        <tr>
+          <td>
+            <%= link_to(@book.user) do %>
+            <%= image_tag @book.user.get_profile_image, size:"50x50" %><br>
+            <%= @book.user.name %>
+            <% end %>
+          </td>
+          <td><%= book_comment.comment %></td>
+          <td>
+            <% if book_comment.user == current_user %>
+             <%= link_to "Destroy", book_book_comment_path(book_comment.book, book_comment), class: "btn btn-sm btn-danger", method: :delete %>
+            <% end %>
+          </td><br><br>
+        </tr>
+        <% end %>
+      </tadle>
+        <div>
+          <%= form_with model: [@book, @book_comment] do |f| %>
+           <%= f.text_area :comment, rows: '5', :class => 'form-control' %><br>
+           <%= f.submit "送信" %>
+          <% end %>
+        </div>
+        </div>
     </div>
   </div>
 </div>
